Started Expectations paragraph

--- a/report/OpticsReport.tex
+++ b/report/OpticsReport.tex
@@ -40,7 +40,7 @@ We thought of a test case that would provide us with an input allowing us to eas
 \includegraphics[scale=0.6]{img/colorplot.png}
 \\
 \\
-One can see clearly some clusters of the colors while, yellow, orange, as well as some shades of magenta and purple.
+One can see clearly some clusters of the colors white, yellow, orange, as well as some shades of magenta and purple.
 
 \subsection{General application}
 If the algorithm is to run correctly these pixels should be clustered with other pixels of their approximate shade. These clusters could then be averaged for a color. When pixels are then translated back onto a two-dimensional plane (an image), that new image will contain significantly less colors and can be stored more efficiently.
@@ -67,7 +67,7 @@ Text body
 \subsection{Project outcome}
 Text body
 \subsection{Expectations}
-Text body
+With respect to efficiency, we do not expect our implementation of the OPTICS algorithm to be better than existing 
 
 \section{Future directions}
 The algorithm as we have implemented it, executes on a collection of Vectors in a real vector space. This input could be generalized to Vectors of other vector spaces. One would have to generalize the Vector definition, and also define a matching function to calculate a proximity between any such two Vectors.
